clusters/foobar/staging/example-app/generated/ingress.yaml
####################################################################################
# ⚠️ THIS IS A GENERATED FILE ⚠️
# DO NOT MAKE MANUAL CHANGES
####################################################################################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/app-root: /ui/
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app.kubernetes.io/name: example
    app.kubernetes.io/instance: example
  name: example-tenant-1
spec:
  rules:
  - host: example.tenant-1.staging.foo
    http:
      paths:
      - path: /rest/?(.*)
        backend:
          service:
            port:
              name: http-backend
            name: example-backend
        pathType: Prefix
      - path: /ui/?(.*)
        backend:
          service:
            port:
              name: http-ui
            name: example-ui
        pathType: Prefix
  tls:
  - secretName: example-tenant-1-tls-secret
    hosts:
    - example.tenant-1.staging.foo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: 'false'
    ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/app-root: /ui/
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app.kubernetes.io/name: example
    app.kubernetes.io/instance: example
  name: example-tenant-3
spec:
  rules:
  - host: example.tenant-3.staging.bar
    http:
      paths:
      - path: /rest/?(.*)
        backend:
          service:
            port:
              name: http-backend
            name: example-backend
        pathType: Prefix
      - path: /ui/?(.*)
        backend:
          service:
            port:
              name: http-ui
            name: example-ui
        pathType: Prefix
  tls:
  - secretName: custom-tenant-3-tls-secret
    hosts:
    - example.tenant-3.staging.bar
